Kubernetes/ansible_awx/awx-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ansible-awx-web-svc
  labels:
    name: ansible-awx-web-svc
    app: ansible-awx
    app-component: ansible-awx-web-svc
spec:
  type: "NodePort"
  ports:
    - name: awx-portal
      port: 80
      targetPort: 8052
  selector:
    app-component: ansible-awx-deploy
