Kubernetes/ansible_awx/rabbitmq-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  labels:
    app: ansible-awx
    app-component: ansible-awx-rabbitmq
spec:
  type: NodePort
  ports:
   - name: rabbitmq-portal
     protocol: TCP
     port: 15672
     targetPort: 15672
   - name: rabbitmq-amqp
     protocol: TCP
     port: 5672
     targetPort: 5672
  selector:
    app-component: ansible-awx-deploy
