Kubernetes/ansible_awx/awx-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ansible-awx-web-svc
spec:
  backend:
    serviceName: ansible-awx-web-svc
    servicePort: 80
